[tool.poetry]
name = "hcn-bot"
version = "0.1.3"
description = ""
authors = ["hsn <hsn1919810@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.22.0"
aiohttp = "^3.10.3"
invoke = "^2.2.0"
anyquote = {git = "https://github.com/Suto-Commune/anyquote.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

